--- a/april_05_09/08-04-2021/report.Rmd
+++ b/april_05_09/08-04-2021/report.Rmd
@@ -16,7 +16,13 @@ Modern Family is an American mockumentary family sitcom television series create
 ## Logo
 
 ![title](Modernfamily.png)
+## Views Plot
 
 ```{r pressure, echo=FALSE}
-plot(pressure)
+a <- seq(1,11,1)
+b <- c(9.49,11.89,12.93,12.31,11.79,11.91,9.83,8.79,7.09,6.4,7.1)
+
+df <- data.frame(a,b)
+colnames(df) <- c("Season","Views (M)")
+plot(df)
 ```
